examples/fail/fail_exception_top_level/project.bri
import * as std from "std";

export const project = {
  dependencies: {
    std: "*",
  },
};

throw new Error("top level exception");

// eslint-disable-next-line
export default () => {
  return std.directory();
};
